# Weather_Monitor

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  Requirement.md  Requirement.org  docker-compose.override.yml  docker-compose.yml  docker.sh  start-dev.sh
.github/workflows/: SETUP.md  ci.yml  deploy.yml  docker.yml
.github/workflows/environments/: development.env  production.env
backend/: .env.example  Dockerfile  alembic.ini  main.py  migrate_db.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2faf2489c50c_add_formal_name_column_to_users_table.py
backend/src/api/: __init__.py  auth.py  observations.py  users.py
backend/src/core/: __init__.py  config.py  database.py  security.py
backend/src/middleware/: auth_middleware.py
backend/src/models/: __init__.py  observation_model.py  user_model.py
backend/src/schemas/: __init__.py  observation_schemas.py  user_schemas.py
backend/tests/: conftest.py  test_auth.py  test_observations.py  test_users.py
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
frontend/src/components/: LoadingSpinner.jsx  Navbar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/locales/: en.json  i18n.js  zh-TW.json
frontend/src/pages/: AdminPanel.jsx  AuthCallback.jsx  Dashboard.jsx  (+6 more)
k8s/: README.md  deploy.sh
k8s/base/: backend.yaml  configmap.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  secrets.yaml
(+6 files in other folders)
